set(OPENSSL_ROOT_DIR /usr/local/Cellar/openssl/*)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Werror -pedantic")
find_package(OpenSSL REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIR} .)
add_library(engine SHARED engine.cc)
target_link_libraries(engine crypto)
add_subdirectory(examples)
